--- a/assignments/diseñoMaquetadoWeb/login.html
+++ b/assignments/diseñoMaquetadoWeb/login.html
@@ -1,52 +1,49 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Inicio de Sesión</title>
-    <link rel="stylesheet" href="primero.css">
-
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="login.css">
+    <script src="login.js"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
 
-<body class = "fondo-rojo">  
-    <div class=”container-fluid” >
-        
-        <div class="row text-center justify-content-center">
-            <div class="col-4 ">
-                    <img src="imagenes/LogoUTNDDS.png" alt="Logo departamento">
+<body class="background">
+    <div class="container-fluid">
 
-                    <h1 id = "HOLA">
-                        ¡Hola!
-                    </h1>
+        <div class="container">
+            <div class="col-11 cuadrado">
 
-                <form action = "" class="formulario">
-                    
-                    <div class = "row auto m-1 justify-content-center">
-                        <input type="text" id="mail" name="mail" required placeholder="Mail" class = "inputs">
-                    </div>
+                <form action="" class="formulario row">
+                    <h2 class="Login">
+                        Log in
+                    </h2>
+                    <div class="w-100"></div>
+                    <p>Log into your account</p>
 
-                    <div class = "row auto m-2 justify-content-center">
-                        <input type="text" id="contrasena" name="contrasena" required placeholder="Contraseña" class = "inputs">
-                    </div>
+                    <input type="text" id="mail" name="mail" required placeholder="Your email..." class="col-12 inputs">
 
-                    <div class = "row m-3 justify-content-center">
-                        <label>
-                            <input type="checkbox" id="recordarme" name="recordarme">
-                            Recordarme
-                        </label>
-                    </div>
+                    <input type="password" id="contrasena" name="contrasena" required placeholder="Your password..."
+                        class=" col-12 inputs">
 
-                    <div class = "row m-4 justify-content-center">
-                        <button> Iniciar Sesion</button>
-                        <p>¿No tenés cuenta?</p> <a>Registrate acá</a>
-                    </div>
+                    <button class="botonSU col-6 btn btn-light " onclick="actualizarConNombre()">Sign up</button>
+
+                    <button class="botonLI col-6 btn btn-primary section-button" onclick="actualizarConNombre()">Log in</button>
                 </form>
             </div>
-        </div> 
+        </div>
     </div>
 </body>
 
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+    crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js"
+    integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+    crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js"
+    integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+    crossorigin="anonymous"></script>
