--- a/anual/frontend/signup.html
+++ b/anual/frontend/signup.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Inicio de Sesión</title>
-    <link rel="stylesheet" href="signup.css">
-    <script src="signup.js"></script>
+    <title>Registro</title>
+    <link rel="stylesheet" href="forms.css">
+    <script src="forms.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
@@ -15,31 +15,36 @@
     <div class="container-fluid">
 
         <div class="container">
-            <div class="col-11 cuadrado">
+            <div class="cuadrado">
 
                 <form action="" class="formulario row">
-                    <h2 class="Signup">
+                    <h3 class="Title">
                         Sign up
-                    </h2>
+                    </h3>
                     <div class="w-100"></div>
                     <p>Sign up to your account</p>
+                    <div class="w-100"></div>
 
-                    <input type="text" id="mail" name="mail" required placeholder="Your email..." class="col-12 inputs">
+                    <div class="d-flex justify-content-between w-100 gap">
+                    <input type="text" id="mail" name="mail" required placeholder="Your email..." class="inputs" style="width: 70%;">
 
-                    <div id="cuadrado2" class="cuadrado"></div>
-                    <select id="color-selector">
-                        <option value='azul'>AZUL</option>
-                        <option value='rojo'>ROJO</option>
+                    <select required value="Who are you?" class="whoareyou inputs" style="width: 30%;">
+                        <option selected disabled hidden>Choose one</option>
+                        <option value='Contributor' class="desplegables">Contributor</option>
+                        <option value='Technician' class="desplegables">Technician</option>
+                        <option value='PersonInNeed' class="desplegables">Person in need</option>
                     </select>
+                    </div>
 
                     <input type="password" id="contrasena" name="contrasena" required placeholder="Your password..."
                         class=" col-12 inputs">
-                    <input type="password" id="contrasena" name="contrasena" required placeholder="Your password again..."
+                    <input type="password" id="contrasenaConfirmada" name="contrasena" required placeholder="Your password again..."
                         class=" col-12 inputs">
 
-                    <button class="botonSU col-6 btn btn-primary section-button " onclick="actualizarConNombre()">Sign up</button>
-
-                    <button class="botonLI col-6 btn btn-light" onclick="actualizarConNombre()">Log in</button>
+                    <div class="d-flex w-100 gap" style="margin-top: 20px;">
+                    <button class="botonSU2 col-6 btn btn-primary section-button" onclick="validar()">Sign up</button>
+                    <button class="botonLI2 col-6 btn btn-light" onclick="validar()">Log in</button>
+                    </div>
                 </form>
             </div>
         </div>
