--- a/anual/frontend/login.html
+++ b/anual/frontend/login.html
@@ -11,7 +11,7 @@
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
 
-<body class="background">
+<body >
     <div class="container-fluid">
 
         <div class="container">
