--- a/anual/frontend/signup.html
+++ b/anual/frontend/signup.html
@@ -25,25 +25,27 @@
                     <p>Sign up to your account</p>
                     <div class="w-100"></div>
 
-                    <div class="d-flex justify-content-between w-100 gap">
-                    <input type="text" id="mail" name="mail" required placeholder="Your email..." class="inputs" style="width: 70%;">
+                    <div class="d-flex w-100 gap">
+                        <input type="text" id="mail" name="mail" required placeholder="Your email..." class="inputs"
+                            style="width: 70%;">
 
-                    <select required value="Who are you?" class="whoareyou inputs" style="width: 30%;">
-                        <option selected disabled hidden>Choose one</option>
-                        <option value='Contributor' class="desplegables">Contributor</option>
-                        <option value='Technician' class="desplegables">Technician</option>
-                        <option value='PersonInNeed' class="desplegables">Person in need</option>
-                    </select>
+                        <select required value="Who are you?" class="whoareyou inputs" style="width: 30%;">
+                            <option selected disabled hidden>Choose one</option>
+                            <option value='Contributor' class="desplegables">Contributor</option>
+                            <option value='Technician' class="desplegables">Technician</option>
+                            <option value='PersonInNeed' class="desplegables">Person in need</option>
+                        </select>
                     </div>
 
                     <input type="password" id="contrasena" name="contrasena" required placeholder="Your password..."
                         class=" col-12 inputs">
-                    <input type="password" id="contrasenaConfirmada" name="contrasena" required placeholder="Your password again..."
-                        class=" col-12 inputs">
+                    <input type="password" id="contrasenaConfirmada" name="contrasena" required
+                        placeholder="Your password again..." class=" col-12 inputs">
 
                     <div class="d-flex w-100 gap" style="margin-top: 20px;">
-                    <button class="botonSU2 col-6 btn btn-primary section-button" onclick="validar()">Sign up</button>
-                    <button class="botonLI2 col-6 btn btn-light" onclick="validar()">Log in</button>
+                        <button class="botonLI1 col-6 btn btn-primary section-button" onclick="validar()">Sign
+                            up</button>
+                        <button class="botonLI2 col-6 btn btn-light" onclick="validar()">Log in</button>
                     </div>
                 </form>
             </div>
