--- a/anual/frontend/inicio.html
+++ b/anual/frontend/inicio.html
@@ -14,15 +14,12 @@
 <body class="background">
     <div class="container-fluid">
 
-        <div class="container">
             <div class="cuadrado">
 
-                <form action="" class="formulario row">
-                    <img src="imagenes/Logo.png" alt="Logo">
-
-                    <div style="margin-top: 20px;">
-                        <button class="botonLI1 col-6 btn btn-primary section-button" onclick="validar()">Join as a collaborator</button>
-                        <button class="botonLI1 col-6 btn btn-primary section-button" onclick="validar()">Find your nearest fridge</button>
+                    <div class="d-flex w-100 gap" style="margin-top: 20px;">
+                        <img src="imagenes/Logo.png" alt="Logo">                    
+                        <button class="boton1 col-4 btn btn-primary section-button" onclick="validar()">Join as a collaborator</button>                        
+                        <button class="boton1 col-4 btn btn-primary section-button" onclick="validar()">Find your nearest fridge</button>
                     </div>
                     
                     <div class="w-100"></div>
