--- a/anual/frontend/login.html
+++ b/anual/frontend/login.html
@@ -30,8 +30,8 @@
                         class=" col-12 inputs">
 
                     <div class="d-flex w-100 gap" style="margin-top: 20px;">
-                        <button class="botonSU1 col-6 btn btn-light" onclick="validar()">Sign up</button>
-                        <button class="botonLI1 col-6 btn btn-primary section-button" onclick="validar()">Log in</button>
+                        <button class="boton2 col-6 btn btn-light" onclick="validar()">Sign up</button>
+                        <button class="boton1 col-6 btn btn-primary section-button" onclick="validar()">Log in</button>
                     </div>
                 </form>
             </div>
