--- a/anual/frontend/login.html
+++ b/anual/frontend/login.html
@@ -11,11 +11,11 @@
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
 
-<body >
+<body style="display: flex; justify-content: center; align-items: center; height: 100vh;">
     <div class="container-fluid">
 
         <div class="container">
-            <div class="cuadrado">
+            <div>
 
                 <form action="" class="formulario row">
                     <h3 class="Title">
