--- a/anual/frontend/registerPIN.html
+++ b/anual/frontend/registerPIN.html
@@ -41,8 +41,8 @@
                         placeholder="Number of children in charge..." class=" col-12 inputs">
 
                     <div class="d-flex w-100 gap" style="margin-top: 20px;">
-                        <button class="boton1 col-6 btn btn-primary section-button" onclick="validar()">Accept</button>
-                        <button class="boton2 col-6 btn btn-light" onclick="validar()">Cancel</button>
+                        <button type="submit" class="boton1 col-6 btn btn-primary section-button" onclick="validar()">Accept</button>
+                        <button type="reset" class="boton2 col-6 btn btn-light" onclick="validar()">Cancel</button>
                     </div>
                 </form>
             </div>
