--- a/anual/frontend/moneyDonation.html
+++ b/anual/frontend/moneyDonation.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Inicio de Sesión</title>
+    <title>Donación de Dinero</title>
     <link rel="stylesheet" href="forms.css">
     <script src="forms.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
@@ -19,19 +19,21 @@
 
                 <form action="" class="formulario row">
                     <h3 class="Title">
-                        Log in
+                        Money Donation
                     </h3>
                     <div class="w-100"></div>
-                    <p>Log into your account</p>
+                    <p>Contribute donating money</p>
 
-                    <input type="text" id="mail" name="mail" required placeholder="Your email..." class="col-12 inputs">
-
-                    <input type="password" id="contrasena" name="contrasena" required placeholder="Your password..."
+                    <input type="text" id="amount" name="amount" required placeholder="Amount to donate..."
+                        class="col-12 inputs">
+                    <input type="text" id="cardID" name="cardID" required placeholder="Your card ID..."
+                        class="col-12 inputs">
+                    <input type="password" id="cvv" name="cvv" required placeholder="Your card verification value..."
                         class=" col-12 inputs">
 
                     <div class="d-flex w-100 gap" style="margin-top: 20px;">
-                        <button type="submit" class="boton1 col-6 btn btn-primary section-button" onclick="validar()">Log in</button>
-                        <button class="boton2 col-6 btn btn-light" onclick="validar()">Sign up</button>
+                        <button type="submit" class="boton1 col-6 btn btn-primary section-button" onclick="validar()">Submit</button>
+                        <button type="reset" class="boton2 col-6 btn btn-light section-button" onclick="validar()">Cancel</button>
                     </div>
                 </form>
             </div>
