--- a/anual/frontend/rewardCollab.html
+++ b/anual/frontend/rewardCollab.html
@@ -39,8 +39,9 @@
                             <option value='Home' class="desplegables">Home</option>
                         </select>
                     </div>
-                    <input type="file" class="col-12 inputs required" id="picture" name="picture" accept=".jpeg"> <!--como agrego otros tipos?-->
-
+                    
+                    <input type="file" class="col-12 inputs required" id="picture" name="picture" accept=".png">
+                    <p>Add a reward picture</p>
                     <div class="d-flex w-100 gap" style="margin-top: 20px;">
                         <button type="submit" class="boton1 col-6 btn btn-primary section-button" onclick="validar()">Submit</button>
                         <button type="reset" class="boton2 col-6 btn btn-light section-button" onclick="validar()">Cancel</button>
