--- a/anual/frontend/mealDistribution.html
+++ b/anual/frontend/mealDistribution.html
@@ -25,14 +25,13 @@
                     <p>Contribute distributing a meal</p>
                 </div>
                 <div>
-                    <span style="color: #136C91;" class="clickable-text" onclick="agregarInput()">Agregar comida</span> <b>|</b>
-                    <span  style="color: #136C91" class="clickable-text" onclick="eliminarInput()">Eliminar comida</span>
+                    <span style="color: #136C91;" class="clickable-text" onclick="agregarInput()">Add meal</span> <b>|</b>
+                    <span  style="color: #136C91" class="clickable-text" onclick="eliminarInput()">Delete meal</span>
                 </div>
                     <div id="input-placeholder" style="width: 100%;">
                         <input type="text" id="meal" name="meal" required placeholder="ID of meal to distribute..."
                             class="col-12 inputs">
                     </div>
-
                    
                     <input type="text" id="reason" name="reason" required placeholder="Reason for relocation..."
                         class="col-12 inputs">
@@ -58,8 +57,6 @@
                     <div class="d-flex justify-content-between w-100 gap">
                         <input type="text" id="dateOfDistribution" name="dateOfDistribution" required placeholder="Date of distribution..."
                         class="w-100 inputs">
-                    <!--<input type="text" id="weight" name="weight" required placeholder="Weight..."
-                        class="w-100 inputs"> -->
                     </div>
 
                     <div class="d-flex w-100 gap" style="margin-top: 20px;">
