--- a/anual/frontend/html/home.html
+++ b/anual/frontend/html/home.html
@@ -10,35 +10,116 @@
 			integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
 			crossorigin="anonymous"
 		/>
-		<link rel="stylesheet" href="../css/home.css" />
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link rel="stylesheet" href="../css/base.css" />
 	</head>
 	<body>
-		<div class="fullscreen py-4 px-5">
-			<nav class="width-100">
-				<div
-					class="d-flex flex-row align-items-center mb-5"
-					style="gap: 30px; position: relative"
-				>
-					<img src="../imagenes/LogoChico.png" alt="" class="logo" style="height: 50px" />
-					<div class="d-flex flex-row align-items-center" style="gap: 30px">
-						<a href="./home.html" class="navbar-link">Home</a>
-						<a href="./home.html" class="navbar-link">Contribuír</a>
-						<a href="./home.html" class="navbar-link">Registrar PIN</a>
-						<div class="navbar-dropdown-container">
-							<p class="navbar-link navbar-dropdown-selector m-0">Heladeras</p>
-							<div class="nav-dropdown">
-								<a href="./home.html" class="navbar-link">Contribuír</a>
-								<a href="./home.html" class="navbar-link">Registrar PIN</a>
+		<div class="fullscreen" ">
+			<div
+				class="d-flex flex-column w-100"
+				style="max-width: 1280px; margin: auto; gap: 50px; padding: 50px;"
+			>
+				<div class="d-flex flex-row justify-content-between align-items-center w-100">
+					<div class="d-flex flex-column gap-3">
+						<h4>Hello alberto 👋</h4>
+						<p>We hope you have a nice day!</p>
+					</div>
+					<button class="btn-primary">Contribute</button>
+				</div>
+
+				<div class="d-flex flex-column w-100" style="gap: 100px">
+					<div class="d-flex flex-row w-100 flex-wrap" style="gap: 50px">
+						<div class="d-flex flex-column flex-grow-1" style="min-width: 300px">
+							<div class="mb-3">
+								<h4>Your recent donations</h4>
+								<p>A history list of all your donations</p>
+							</div>
+							<div
+								class="my-card d-flex flex-column"
+								style="gap: 30px; height: 350px"
+							>
+								<div class="d-flex align-items-center" style="gap: 30px">
+									<h4>🥘</h4>
+									<div>
+										<h5>Food</h5>
+										<p>You have donated “musaka”</p>
+									</div>
+								</div>
+								<div class="d-flex align-items-center" style="gap: 30px">
+									<h4>👨</h4>
+									<div>
+										<h5>Registered person</h5>
+										<p>
+											You have registered “valentina” as part of our community
+										</p>
+									</div>
+								</div>
 							</div>
 						</div>
-						<a href="./home.html" class="navbar-link">Rewards</a>
-						<a href="./home.html" class="navbar-link"></a>
+						<div class="d-flex flex-column flex-grow-1" style="min-width: 300px">
+							<div class="mb-3">
+								<h4>We need your help</h4>
+								<p>Here is the state of the current fridges</p>
+							</div>
+							<div
+								class="my-card d-flex flex-column"
+								style="gap: 30px; height: 350px"
+							>
+								<div class="d-flex align-items-center" style="gap: 30px">
+									<h4>🚽</h4>
+									<div class="w-100">
+										<h5>Medrano fridge</h5>
+										<div class="d-flex w-100 justify-content-between">
+											<p>Medrano fridge needs food</p>
+											<p class="small bold text-danger">Urgent</p>
+										</div>
+									</div>
+								</div>
+								<div class="d-flex align-items-center" style="gap: 30px">
+									<h4>🚽</h4>
+									<div class="w-100">
+										<h5>Lugano fridge</h5>
+										<div class="d-flex w-100 justify-content-between">
+											<p>Lugano fridge needs food</p>
+											<p class="small bold text-warning">Medium urgency</p>
+										</div>
+									</div>
+								</div>
+								<div class="d-flex align-items-center" style="gap: 30px">
+									<h4>🚽</h4>
+									<div class="w-100">
+										<h5>Villa crespo fridge</h5>
+										<div class="d-flex w-100 justify-content-between">
+											<p>Villa crespo fridge needs food</p>
+											<p class="small bold text-success">Low urgency</p>
+										</div>
+									</div>
+								</div>
+								<div class="d-flex align-items-center" style="gap: 30px">
+									<h4>🚽</h4>
+									<div class="w-100">
+										<h5>Villa crespo fridge</h5>
+										<div class="d-flex w-100 justify-content-between">
+											<p>Villa crespo fridge needs food</p>
+											<p class="small bold text-success">Low urgency</p>
+										</div>
+									</div>
+								</div>
+								<div class="d-flex align-items-center" style="gap: 30px">
+									<h4>🚽</h4>
+									<div class="w-100">
+										<h5>Villa crespo fridge</h5>
+										<div class="d-flex w-100 justify-content-between">
+											<p>Villa crespo fridge needs food</p>
+											<p class="small bold text-success">Low urgency</p>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
 					</div>
 				</div>
-			</nav>
-
-			<div class="main">
-				<h1>fdasdsa</h1>
 			</div>
 		</div>
 	</body>
