--- a/anual/frontend/html/home.html
+++ b/anual/frontend/html/home.html
@@ -10,22 +10,62 @@
 			integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
 			crossorigin="anonymous"
 		/>
-		<link rel="preconnect" href="https://fonts.googleapis.com" />
-		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 		<link rel="stylesheet" href="../css/base.css" />
+		<link rel="stylesheet" href="../css/home.css" />
 	</head>
 	<body>
-		<div class="fullscreen" ">
+		<div class="fullscreen">
 			<div
 				class="d-flex flex-column w-100"
-				style="max-width: 1280px; margin: auto; gap: 50px; padding: 50px;"
+				style="max-width: 1280px; margin: auto; gap: 50px; padding: 50px"
 			>
 				<div class="d-flex flex-row justify-content-between align-items-center w-100">
 					<div class="d-flex flex-column gap-3">
 						<h4>Hello alberto 👋</h4>
 						<p>We hope you have a nice day!</p>
 					</div>
-					<button class="btn-primary">Contribute</button>
+					<div class="d-flex flex-row align-items-center" style="gap: 30px">
+						<div class="position-relative alerts-container">
+							<svg
+								xmlns="http://www.w3.org/2000/svg"
+								viewBox="0 0 24 24"
+								fill="currentColor"
+								class="size-6"
+								style="height: 30px; color: var(--gray)"
+							>
+								<path
+									fill-rule="evenodd"
+									d="M5.25 9a6.75 6.75 0 0 1 13.5 0v.75c0 2.123.8 4.057 2.118 5.52a.75.75 0 0 1-.297 1.206c-1.544.57-3.16.99-4.831 1.243a3.75 3.75 0 1 1-7.48 0 24.585 24.585 0 0 1-4.831-1.244.75.75 0 0 1-.298-1.205A8.217 8.217 0 0 0 5.25 9.75V9Zm4.502 8.9a2.25 2.25 0 1 0 4.496 0 25.057 25.057 0 0 1-4.496 0Z"
+									clip-rule="evenodd"
+								/>
+							</svg>
+
+							<div class="my-card d-flex flex-column alerts">
+								<div class="d-flex flex-row align-items-center" style="gap: 30px">
+									<h4>🚨</h4>
+									<div>
+										<h5>Temperature</h5>
+										<p>The medrano fridge temperature is higher than usual!</p>
+									</div>
+								</div>
+								<div class="d-flex flex-row align-items-center" style="gap: 30px">
+									<h4>🚨</h4>
+									<div>
+										<h5>Temperature</h5>
+										<p>The medrano fridge temperature is higher than usual!</p>
+									</div>
+								</div>
+								<div class="d-flex flex-row align-items-center" style="gap: 30px">
+									<h4>🚨</h4>
+									<div>
+										<h5>Temperature</h5>
+										<p>The medrano fridge temperature is higher than usual!</p>
+									</div>
+								</div>
+							</div>
+						</div>
+						<button class="btn-primary">Contribute</button>
+					</div>
 				</div>
 
 				<div class="d-flex flex-column w-100" style="gap: 100px">
