--- a/anual/frontend/html/home.html
+++ b/anual/frontend/html/home.html
@@ -1,119 +1,144 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>FridgeBridge</title>
-		<link
-			rel="stylesheet"
-			href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
-			integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
-			crossorigin="anonymous"
-		/>
-		<link rel="preconnect" href="https://fonts.googleapis.com" />
-		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-		<link rel="stylesheet" href="../css/base.css" />
-	</head>
-	<body>
-		<div class="fullscreen" ">
-			<div
-				class="d-flex flex-column w-100"
-				style="max-width: 1280px; margin: auto; gap: 50px; padding: 50px;"
-			>
-				<div class="d-flex flex-row justify-content-between align-items-center w-100">
-					<div class="d-flex flex-column gap-3">
-						<h4>Hello alberto 👋</h4>
-						<p>We hope you have a nice day!</p>
-					</div>
-					<button class="btn-primary">Contribute</button>
-				</div>
 
-				<div class="d-flex flex-column w-100" style="gap: 100px">
-					<div class="d-flex flex-row w-100 flex-wrap" style="gap: 50px">
-						<div class="d-flex flex-column flex-grow-1" style="min-width: 300px">
-							<div class="mb-3">
-								<h4>Your recent donations</h4>
-								<p>A history list of all your donations</p>
+<head>
+	<meta charset="UTF-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<title>FridgeBridge</title>
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
+		integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" />
+    <link rel="stylesheet" href="../forms.css">
+	<link rel="stylesheet" href="../css/base.css" />
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+
+</head>
+
+<body>
+
+	
+	<div class="fullscreen">
+
+		<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+			<div class="modal-dialog modal-dialog-centered">
+				<div class="modal-content">
+					<div class="modal-header">
+						<h1 class="modal-title fs-5 w-100" id="exampleModalLabel" style="color:#187ba5;">Medrano Fridge</h1>
+						<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+					</div>
+					<div class="modal-body">
+						<form action="" class=" row">
+		
+							<div class="d-flex w-100 gap" style="margin-top: 20px;">
+							<button type="submit" class="boton1 w-100 btn btn-primary section-button inputs" onclick="validar()">Suscribe</button>
 							</div>
-							<div
-								class="my-card d-flex flex-column"
-								style="gap: 30px; height: 350px"
-							>
-								<div class="d-flex align-items-center" style="gap: 30px">
-									<h4>🥘</h4>
-									<div>
-										<h5>Food</h5>
-										<p>You have donated “musaka”</p>
-									</div>
+							
+							<div class="d-flex justify-content-between w-100 gap">
+								<p class="bloqueDeTexto w-100" >Meals 🍲: 40</p>
+								<p class="bloqueDeTexto w-100" >Temperature 🌡️: 4°</p> 
+							</div>                    
+							<div class="d-flex justify-content-between w-100 gap">
+								<p class="bloqueDeTexto w-100" >Reserved ✋: 40</p>
+								<p class="bloqueDeTexto w-100" >State 🤞: Active</p>
+							</div>
+		
+						</form>
+	
+					</div>
+					<div class="modal-footer" style="display: flex;justify-content: space-around;">
+						<button type="button" class=" boton1 footer btn btn-primary">Report failure</button>
+						<button type="button" class=" boton1 footer btn btn-primary">View report</button>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="d-flex flex-column w-100" style="max-width: 1280px; margin: auto; gap: 50px; padding: 50px;">
+			<div class="d-flex flex-row justify-content-between align-items-center w-100">
+				<div class="d-flex flex-column gap-3">
+					<h4>Hello alberto 👋</h4>
+					<p>We hope you have a nice day!</p>
+				</div>
+				<button class="btn-primary">Contribute</button>
+			</div>
+
+			<div class="d-flex flex-column w-100" style="gap: 100px">
+				<div class="d-flex flex-row w-100 flex-wrap" style="gap: 50px">
+					<div class="d-flex flex-column flex-grow-1" style="min-width: 300px">
+						<div class="mb-3">
+							<h4>Your recent donations</h4>
+							<p>A history list of all your donations</p>
+						</div>
+						<div class="my-card d-flex flex-column" style="gap: 30px; height: 350px">
+							<div class="d-flex align-items-center my-card-item" style="gap: 30px">
+								<h4>🥘</h4>
+								<div>
+									<h5>Food</h5>
+									<p>You have donated “musaka”</p>
 								</div>
-								<div class="d-flex align-items-center" style="gap: 30px">
-									<h4>👨</h4>
-									<div>
-										<h5>Registered person</h5>
-										<p>
-											You have registered “valentina” as part of our community
-										</p>
-									</div>
+							</div>
+							<div class="d-flex align-items-center my-card-item" style="gap: 30px">
+								<h4>👨</h4>
+								<div>
+									<h5>Registered person</h5>
+									<p>
+										You have registered “valentina” as part of our community
+									</p>
 								</div>
 							</div>
 						</div>
-						<div class="d-flex flex-column flex-grow-1" style="min-width: 300px">
-							<div class="mb-3">
-								<h4>We need your help</h4>
-								<p>Here is the state of the current fridges</p>
+					</div>
+					<div class="d-flex flex-column flex-grow-1" style="min-width: 300px">
+						<div class="mb-3">
+							<h4>We need your help</h4>
+							<p>Here is the state of the current fridges</p>
+						</div>
+						<div class="my-card d-flex flex-column" style="gap: 30px; height: 350px">
+							<div data-bs-toggle="modal" data-bs-target="#exampleModal" class="d-flex align-items-center my-card-item" style="gap: 30px">
+								<h4>🚽</h4>
+								<div  class="w-100">
+									<h5>Medrano fridge</h5>
+									<div class="d-flex w-100 justify-content-between">
+										<p>Medrano fridge needs food</p>
+										<p class="small bold text-danger">Urgent</p>
+									</div>
+								</div>
 							</div>
-							<div
-								class="my-card d-flex flex-column"
-								style="gap: 30px; height: 350px"
-							>
-								<div class="d-flex align-items-center" style="gap: 30px">
-									<h4>🚽</h4>
-									<div class="w-100">
-										<h5>Medrano fridge</h5>
-										<div class="d-flex w-100 justify-content-between">
-											<p>Medrano fridge needs food</p>
-											<p class="small bold text-danger">Urgent</p>
-										</div>
+							<div class="d-flex align-items-center my-card-item" style="gap: 30px">
+								<h4>🚽</h4>
+								<div class="w-100">
+									<h5>Lugano fridge</h5>
+									<div class="d-flex w-100 justify-content-between">
+										<p>Lugano fridge needs food</p>
+										<p class="small bold text-warning">Medium urgency</p>
 									</div>
 								</div>
-								<div class="d-flex align-items-center" style="gap: 30px">
-									<h4>🚽</h4>
-									<div class="w-100">
-										<h5>Lugano fridge</h5>
-										<div class="d-flex w-100 justify-content-between">
-											<p>Lugano fridge needs food</p>
-											<p class="small bold text-warning">Medium urgency</p>
-										</div>
+							</div>
+							<div class="d-flex align-items-center my-card-item" style="gap: 30px">
+								<h4>🚽</h4>
+								<div class="w-100">
+									<h5>Villa crespo fridge</h5>
+									<div class="d-flex w-100 justify-content-between">
+										<p>Villa crespo fridge needs food</p>
+										<p class="small bold text-success">Low urgency</p>
 									</div>
 								</div>
-								<div class="d-flex align-items-center" style="gap: 30px">
-									<h4>🚽</h4>
-									<div class="w-100">
-										<h5>Villa crespo fridge</h5>
-										<div class="d-flex w-100 justify-content-between">
-											<p>Villa crespo fridge needs food</p>
-											<p class="small bold text-success">Low urgency</p>
-										</div>
+							</div>
+							<div class="d-flex align-items-center" style="gap: 30px">
+								<h4>🚽</h4>
+								<div class="w-100">
+									<h5>Villa crespo fridge</h5>
+									<div class="d-flex w-100 justify-content-between">
+										<p>Villa crespo fridge needs food</p>
+										<p class="small bold text-success">Low urgency</p>
 									</div>
 								</div>
-								<div class="d-flex align-items-center" style="gap: 30px">
-									<h4>🚽</h4>
-									<div class="w-100">
-										<h5>Villa crespo fridge</h5>
-										<div class="d-flex w-100 justify-content-between">
-											<p>Villa crespo fridge needs food</p>
-											<p class="small bold text-success">Low urgency</p>
-										</div>
-									</div>
-								</div>
-								<div class="d-flex align-items-center" style="gap: 30px">
-									<h4>🚽</h4>
-									<div class="w-100">
-										<h5>Villa crespo fridge</h5>
-										<div class="d-flex w-100 justify-content-between">
-											<p>Villa crespo fridge needs food</p>
-											<p class="small bold text-success">Low urgency</p>
-										</div>
+							</div>
+							<div class="d-flex align-items-center" style="gap: 30px">
+								<h4>🚽</h4>
+								<div class="w-100">
+									<h5>Villa crespo fridge</h5>
+									<div class="d-flex w-100 justify-content-between">
+										<p>Villa crespo fridge needs food</p>
+										<p class="small bold text-success">Low urgency</p>
 									</div>
 								</div>
 							</div>
@@ -122,5 +147,7 @@
 				</div>
 			</div>
 		</div>
-	</body>
+	</div>
+</body>
+
 </html>
