--- a/anual/frontend/login.html
+++ b/anual/frontend/login.html
@@ -9,14 +9,15 @@
     <script src="forms.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+
 </head>
 
 <body style="display: flex; justify-content: center; align-items: center; height: 100vh;">
     <div class="container-fluid">
-
+    
         <div class="container">
             <div>
-
                 <form action="" class="formulario row">
                     <h3 class="Title">
                         Log in
