--- a/anual/frontend/html/home.html
+++ b/anual/frontend/html/home.html
@@ -64,8 +64,8 @@
 				<div class="modal-dialog modal-dialog-centered">
 					<div class="modal-content">
 						<div class="modal-header">
-							<h1 class="modal-title fs-5 w-100" id="exampleModalLabel" style="color:#187ba5;">Medrano Fridge</h1>
-							<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+							<h5 class="modal-title fs-5 w-100" id="exampleModalLabel" style="color:#187ba5;">Medrano Fridge</h5>
+							<button type="button" class="close-btn" data-bs-dismiss="modal" aria-label="Close">Close</button>
 						</div>
 						<div class="modal-body">
 							<div class="form-group">
@@ -89,12 +89,12 @@
 				<div class="modal-dialog modal-dialog-centered">
 					<div class="modal-content">
 						<div class="modal-header">
-							<h1 class="modal-title fs-5 w-100" id="exampleModalLabel" style="color:#187ba5;">
-								Medrano Fridge</h1>
-							<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+							<h5 class="modal-title fs-5 w-100" id="exampleModalLabel" style="color:#187ba5;">
+								Medrano Fridge</h5>
+							<button type="button" class="close-btn" data-bs-dismiss="modal" aria-label="Close">Close</button>
 						</div>
 						<div class="modal-body">
-							<form action="" class=" row">
+							<form class="row" style="padding-inline: 20px;">
 
 								<div class="d-flex w-100 gap" style="margin-top: 20px;">
 									<button type="submit" class="boton1 w-100 btn btn-primary section-button inputs"
