botones report y cancel

--- a/anual/frontend/html/collaborator-dash/home.html
+++ b/anual/frontend/html/collaborator-dash/home.html
@@ -75,8 +75,8 @@
 		
 						</div>
 						<div class="modal-footer" style="display: flex;justify-content: space-around;">
-							<button data-bs-toggle="modal" data-bs-target="#profileModal" type="button" class="footer btn btn-light" data-bs-dismiss="modal" style="color: #187ba5;">Cancelar</button>
-							<button type="button" class=" footer btn btn-primary">Reportar</button>
+							<button data-bs-toggle="modal" data-bs-target="#profileModal" type="button" class="footer btn btn-light" data-bs-dismiss="modal" style="color: #187ba5;">Cancel</button>
+							<button type="button" class=" footer btn btn-primary">Report</button>
 						</div>
 					</div>
 				</div>
