--- a/anual/frontend/html/collaborator-dash/home.html
+++ b/anual/frontend/html/collaborator-dash/home.html
@@ -12,8 +12,7 @@
 		/>
 		<link rel="stylesheet" href="../../css/base.css" />
 		<link rel="stylesheet" href="../../css/home.css" />
-
-		<link rel="stylesheet" href="../xd.css" />
+		<link rel="stylesheet" href="../../css/forms.css" />
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 	</head>
 
@@ -68,7 +67,7 @@
 								</div>
 							</div>
 						</div>
-						<button class="btn-primary">Contribute</button>
+						<button class="btn-primary" id="contribute-btn">Contribute</button>
 					</div>
 				</div>
 
@@ -316,4 +315,12 @@
 			</div>
 		</div>
 	</body>
+	<div class="modal" id="modal">
+		<div class="my-card d-flex flex-column justify-content-center" style="width: 650px">
+			<p class="small accent-100 align-self-end btn" id="modal-close">close</p>
+			<div class="my-modal-content" id="modal-content"></div>
+		</div>
+	</div>
+
+	<script src="../../js/modal.js"></script>
 </html>
