--- a/anual/frontend/csv.html
+++ b/anual/frontend/csv.html
@@ -1,47 +1,55 @@
 <!DOCTYPE html>
 <html lang="es">
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Carga CSV</title>
+		<link rel="stylesheet" href="forms.css" />
+		<script src="forms.js"></script>
+		<link
+			rel="stylesheet"
+			href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
+			integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+			crossorigin="anonymous"
+		/>
+	</head>
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Carga CSV</title>
-    <link rel="stylesheet" href="forms.css">
-    <script src="forms.js"></script>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
-        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-</head>
+	<body style="display: flex; justify-content: center; align-items: center; height: 100vh">
+		<div class="container-fluid">
+			<div class="container">
+				<div>
+					<form action="" class="formulario row">
+						<h3 class="Title">Upload CSV</h3>
+						<div class="w-100"></div>
+						<p>Upload the CSV file to keep track of the contributions</p>
 
-<body style="display: flex; justify-content: center; align-items: center; height: 100vh;">
-    <div class="container-fluid">
+						<input
+							type="file"
+							class="col-12 inputs required"
+							id="csv"
+							name="csv"
+							accept=".csv"
+						/>
 
-        <div class="container">
-            <div>
-
-                <form action="" class="formulario row">
-                    <h3 class="Title">
-                        Upload CSV
-                    </h3>
-                    <div class="w-100"></div>
-                    <p>Upload the CSV file to keep track of the contributions</p>
-
-                    <input type="file" class="col-12 inputs required" id="csv" name="csv" accept=".csv"> 
-
-                    <div class="d-flex w-100 gap" style="margin-top: 20px;">
-                        <button type="submit" class="boton1 col-6 btn btn-primary section-button" onclick="validar()">Submit</button>
-                        <button type="reset" class="boton2 col-6 btn btn-light section-button" onclick="validar()">Cancel</button>
-                    </div>
-                </form>
-            </div>
-        </div>
-    </div>
-</body>
-
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-    crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js"
-    integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-    crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js"
-    integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-    crossorigin="anonymous"></script>
+						<div class="d-flex w-100 gap" style="margin-top: 20px">
+							<button
+								type="submit"
+								class="boton1 col-6 btn btn-primary section-button"
+								onclick="validar()"
+							>
+								Submit
+							</button>
+							<button
+								type="reset"
+								class="boton2 col-6 btn btn-light section-button"
+								onclick="validar()"
+							>
+								Cancel
+							</button>
+						</div>
+					</form>
+				</div>
+			</div>
+		</div>
+	</body>
+</html>
