--- a/anual/frontend/html/registration/signupIND.html
+++ b/anual/frontend/html/registration/signupIND.html
@@ -65,7 +65,7 @@
 					class="col-12 inputs"
 				/>
 				<input
-					type="text"
+					type="date"
 					id="fechaDeNacimiento"
 					name="fechaDeNacimiento"
 					required
