--- a/anual/frontend/html/collaborator-dash/home.html
+++ b/anual/frontend/html/collaborator-dash/home.html
@@ -196,6 +196,59 @@
 						</div>
 					</div>
 				</div>
+
+				<div class="d-flex flex-column w-100" style="gap: 100px"></div>
+					<div class="d-flex flex-row w-100 flex-wrap" style="gap: 50px">
+						<div class="d-flex flex-column flex-grow-1" style="min-width: 300px">
+							<div class="mb-3">
+								<h4>Rewards 🎁</h4>
+								<p>Here are some rewards for your hard work!</p>
+							</div>
+							
+							<div
+								class="my-card d-flex flex-column"
+								style="gap: 30px; height: 350px"
+							>
+								<div class="d-flex w-100 justify-content-between">
+									<p>Your points:</p>
+									<p class="points">200</p>
+								</div>
+								<div
+									class="d-flex align-items-center my-card-item"
+									style="gap: 30px"
+								>
+									<h4>🍴</h4>
+									<div>
+										<h5>Cooking</h5>
+										<p>You can exchange your points for useful cooking supplies</p>
+									</div>
+								</div>
+								<div
+									class="d-flex align-items-center my-card-item"
+									style="gap: 30px"
+								>
+									<h4>🛋️</h4>
+									<div>
+										<h5>Home</h5>
+										<p>
+											You can exchange your points for nice home supplies
+										</p>
+									</div>
+								</div>
+								<div
+									class="d-flex align-items-center my-card-item"
+									style="gap: 30px"
+								>
+									<h4>🎮</h4>
+									<div>
+										<h5>Technology</h5>
+										<p>You can exchange your points for trendy technological devices</p>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+
 			</div>
 		</div>
 	</body>
